CRUD GraphQL
Alterei as funcoes que eu fiz ontem, e criei as rotas de Create, Delete e Update no GraphQL